testsuite/tests/typecheck/should_fail/T10709.stderr

T10709.hs:6:21: error:
    • Couldn't match type ‘a4’ with ‘(forall a. IO a -> IO a) -> IO a5’
      Expected: a4 -> IO a5
        Actual: ((forall a. IO a -> IO a) -> IO a5) -> IO a5
      Cannot instantiate unification variable ‘a4’
      with a type involving polytypes: (forall a. IO a -> IO a) -> IO a5
    • In the second argument of ‘(.)’, namely ‘mask’
      In the expression: replicateM 2 . mask
      In an equation for ‘x1’: x1 = replicateM 2 . mask
    • Relevant bindings include
        x1 :: a4 -> IO [a5] (bound at T10709.hs:6:1)

T10709.hs:7:22: error:
    • Couldn't match type ‘a2’ with ‘(forall a. IO a -> IO a) -> IO a3’
      Expected: a2 -> IO a3
        Actual: ((forall a. IO a -> IO a) -> IO a3) -> IO a3
      Cannot instantiate unification variable ‘a2’
      with a type involving polytypes: (forall a. IO a -> IO a) -> IO a3
    • In the second argument of ‘(.)’, namely ‘mask’
      In the expression: (replicateM 2 . mask) undefined
      In an equation for ‘x2’: x2 = (replicateM 2 . mask) undefined
    • Relevant bindings include x2 :: IO [a3] (bound at T10709.hs:7:1)

T10709.hs:8:22: error:
    • Couldn't match type ‘a0’ with ‘(forall a. IO a -> IO a) -> IO a1’
      Expected: a0 -> IO a1
        Actual: ((forall a. IO a -> IO a) -> IO a1) -> IO a1
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: (forall a. IO a -> IO a) -> IO a1
    • In the second argument of ‘(.)’, namely ‘mask’
      In the first argument of ‘($)’, namely ‘(replicateM 2 . mask)’
      In the expression: (replicateM 2 . mask) $ undefined
    • Relevant bindings include x3 :: IO [a1] (bound at T10709.hs:8:1)
